archive/roadmap-overlays/aethernova-chain-core/ops/terraform/modules/policies/gatekeeper/tests/gator/cases/denied/ns-missing-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-missing-owner-label
  labels:
    app.kubernetes.io/name: sample
    # ВНИМАНИЕ: намеренно отсутствует обязательный лейбл
    # "aethernova.io/namespace-owner"
